# tiny-vid

./: .gitignore  .prettierignore  .release-it.json  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY.md  components.json  electron-builder.yml  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
.github/workflows/: electron-ci.yml
app/: app.tsx  index.d.ts  index.html  renderer.tsx
app/styles/: app.css  globals.css  window.css
docker/: linux-builder.Dockerfile
electron/: main.mjs  preload.cjs
electron/icons/: icon.icns
native/: Cargo.toml
native/src/: codec.rs  error.rs  lib.rs  preview.rs  sidecar_api.rs  test_support.rs
native/src/ffmpeg/: builder.rs  cache.rs  discovery.rs  error.rs  ffprobe.rs  mod.rs  runner.rs  temp.rs
native/tests/: discovery_bundled.rs  integration_lifecycle.rs  integration_preview_smoke.rs  integration_runtime_commands.rs  integration_transcode_contract.rs  integration_transcode_smoke.rs
native/tests/support/: mod.rs
scripts/: build-ffmpeg-full-macos.sh  build-ffmpeg-lgpl-macos.sh  build-ffmpeg-lgpl.sh  build-ffmpeg-standalone-macos.sh  build-linux.sh  build-macos.sh  build-windows.sh  build.sh  clean-bundle.ts  compare-macos-builds.sh  compile-icon.sh  ffmpeg-profile.ts  generate-icons.ts  merge-config.ts  options.ts  prepare-ffmpeg.ts  process.ts  runtime.ts  standalone.ts  tv.ts  utils.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .tauri-merged.json  Cargo.toml  Info.plist  build.rs  tauri.conf.bare.json  tauri.conf.json  tauri.conf.lgpl.json
src-tauri/capabilities/: default.json
src-tauri/icon-src/icon.icon.src/: icon.json
src-tauri/icons/: Assets.car  icon.icns
src-tauri/overrides/: lgpl.json  macos-lgpl.json  standalone-gpl.json  standalone-lgpl-vt.json  windows-standalone.json
src-tauri/permissions/: allow-get-pending-opened-files.toml
src-tauri/permissions/autogenerated/: cleanup_temp_file.toml  extract_first_frame.toml  ffmpeg_preview.toml  ffmpeg_preview_estimate.toml  ffmpeg_terminate.toml  ffmpeg_transcode_to_temp.toml  get_build_variant.toml  get_file_size.toml  get_pending_opened_files.toml  get_video_metadata.toml  move_compressed_file.toml  preview_ffmpeg_command.toml  preview_media_bytes.toml
src-tauri/src/: codec.rs  codec_names.rs  commands.rs  commands_tests.rs  error.rs  integration_tests.rs  lib.rs  log_plugin.rs  main.rs  preview.rs  test_support.rs  test_util.rs
src-tauri/src/ffmpeg/: builder.rs  cache.rs  discovery.rs  error.rs  ffprobe.rs  mod.rs  progress.rs  runner.rs  temp.rs  verify.rs
src-tauri/tests/: discovery_bundled.rs  integration_lifecycle.rs  integration_preview_smoke.rs  integration_runtime_commands.rs  integration_transcode_contract.rs  integration_transcode_smoke.rs
src-tauri/tests/support/: mod.rs
(+94 files in other folders)
