[package]
name = "tiny-vid"
version = "1.1.0"
description = "Desktop app for compressing and optimizing video files with support for H.264, H.265, VP9, and AV1 codecs"
authors = ["Mantas Mikalauskis"]
edition = "2024"

[features]
default = []
lgpl = []
# Enables resettable FFmpeg path cache so discovery_bundled tests can run in any order.
discovery-test-helpers = []
# Exposes narrow test-only APIs for integration test targets under native/tests.
integration-test-api = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tiny_vid_core"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1.12.3"
thiserror = "2"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
