[package]
name = "tiny-vid"
version = "1.0.0"
description = "Desktop app for compressing and optimizing video files with support for H.264, H.265, VP9, and AV1 codecs"
authors = ["Mantas Mikalauskis"]
edition = "2024"

[features]
default = []
lgpl-macos = []
# Enables resettable FFmpeg path cache so discovery_bundled tests can run in any order.
discovery-test-helpers = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tiny_vid_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2.3.2"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
regex = "1.12.2"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
